*SVN*

* assert_response failures include the exception message.  #10688 [Seth Rasmussen]

* All fragment cache keys are now by default prefixed with the "views/" namespace [DHH]

* Moved the caching stores from ActionController::Caching::Fragments::* to ActiveSupport::Cache::*. If you're explicitly referring to a store, like ActionController::Caching::Fragments::MemoryStore, you need to update that reference with ActiveSupport::Cache::MemoryStore [DHH]

* Deprecated ActionController::Base.fragment_cache_store for ActionController::Base.cache_store [DHH]

* Made fragment caching in views work for rjs and builder as well #6642 [zsombor]

* Fixed rendering of partials with layout when done from site layout #9209 [antramm]

* Fix atom_feed_helper to comply with the atom spec.  Closes #10672 [xaviershay]

  * The tags created do not contain a date (http://feedvalidator.org/docs/error/InvalidTAG.html)
  * IDs are not guaranteed unique
  * A default self link was not provided, contrary to the documentation
  * NOTE:  This changes tags for existing atom entries, but at least they validate now.

* Correct indentation in tests.  Closes #10671 [l.guidi]

* Fix that auto_link looks for ='s in url paths (Amazon urls have them).  Closes #10640 [bgreenlee]

* Ensure that test case setup is run even if overridden.  #10382 [Josh Peek]

* Fix HTML Sanitizer to allow trailing spaces in CSS style attributes.  Closes #10566 [wesley.moxam]

* Add :default option to time_zone_select.  #10590 [Matt Aimonetti]


*2.0.2* (December 16th, 2007)

* Added delete_via_redirect and put_via_redirect to integration testing #10497 [philodespotos]

* Allow headers['Accept'] to be set by hand when calling xml_http_request #10461 [BMorearty]

* Added OPTIONS to list of default accepted HTTP methods #10449 [holoway]

* Added option to pass proc to ActionController::Base.asset_host for maximum configurability #10521 [chuyeow]. Example:

    ActionController::Base.asset_host = Proc.new { |source|