@@ -1,5 +1,7 @@
 *SVN*
 
+* Support render :text => nil.  #6684 [tjennings, PotatoSalad, Cheah Chu Yeow]
+
 * assert_response failures include the exception message.  #10688 [Seth Rasmussen]
 
 * All fragment cache keys are now by default prefixed with the "views/" namespace [DHH]
